v0.1.3 - beta
- when hovering over some buttons, tooltips with keyboard shortcuts are shown
- changing position of a chord

v0.1.2 - beta
- now chords can be added with numpad keys
- active line automatically moves down by 1 after note added
- ctrl + arrow moves all notes in the direction of an arrow
- refreshed GUI and changed font
- bugfix: now if there's 1 or no notes, there is also no lines
- bugfix: when exporting file type filter no longer shows project file
- bugfix: hyphen and equal keys no longer works as ctrl, shift, s, o and e

v0.1.1 - beta
- fixed UI bug on windows
- now breaks between notes are customizable too
- updated Readme.md

v0.1.0 - beta
Initial release

- adding and removing notes and chords
- saving and opening projects
- exporting to png
- page dimensions, language, theme and cut line are customizable with config file