@@ -1,9 +1,0 @@
-english
-dark
-21
-29.7
-12.8
-16.7
-1.3
-0.9
-0.5
