@@ -1,6 +1,7 @@
 v0.1.3 - beta
 - when hovering over some buttons, tooltips with keyboard shortcuts are shown
 - changing position of a chord
+- config is now saved as .json file for easier editing
 
 v0.1.2 - beta
 - now chords can be added with numpad keys
